# Photostat

./: meson.build
data/: com.github.photostat-editor.photostat.desktop.in  meson.build
po/: POTFILES
src/: SetupWindow.vala  meson.build
src/Layouts/: HeaderBar.vala
